# betting-system

./: Makefile  README.md  alembic.ini  docker-compose.yml  example.env  pyproject.toml
alembic/: env.py
bet-maker/: Dockerfile  app.py  crud.py  db.py  models.py  schemas.py
bet-maker/tests/: test_bet_maker.py
line-provider/: Dockerfile  app.py  schemas.py
line-provider/tests/: test_line_provider.py
