[tool.poetry]
name = "betting-system"
version = "0.1.0"
description = ""
authors = ["Dmitriy Shubenok <dshubenok93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.4"
SQLAlchemy = "^2.0.36"
httpx = "^0.27.2"
alembic = "^1.13.3"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
uvicorn = "^0.32.0"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
